--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booland</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Booland</title>
 
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    
-</body>
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+
+    <body>
+
+        <header>
+            <section class="nav-bar container flex-center">
+
+                <nav class="menu flex-center">
+                    <ul>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                    </ul>
+                </nav>
+
+                <div class="main-logo flex-center">
+                    LOGO
+                </div>
+
+                <div class="account-icon flex-center">
+                    <ul>
+                        <li>Icon</li>
+                        <li>Icon</li>
+                        <li>Icon</li>
+                    </ul>
+                </div>
+            </section>
+        </header>
+
+
+        <main>
+   
+        </main>
+
+        <footer>
+
+        </footer>
+    </body>
 </html>
