Create article structure

--- a/index.html
+++ b/index.html
@@ -38,7 +38,75 @@
 
 
         <main>
-   
+            <section class="row-items container flex-center">
+                <article class="shop-article ">
+                    <div class="img-article">
+
+                    </div>
+                    <div class="price-box flex-column">
+                        <span class="marca">Levis</span>
+                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                    </div>
+                </article>
+
+                <article class="shop-article ">
+                    <div class="img-article">
+
+                    </div>
+                    <div class="price-box flex-column">
+                        <span class="marca">Levis</span>
+                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                    </div>
+                </article>
+
+                <article class="shop-article ">
+                    <div class="img-article">
+
+                    </div>
+                    <div class="price-box flex-column">
+                        <span class="marca">Levis</span>
+                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                    </div>
+                </article>
+            </section>
+
+            <section class="row-items container flex-center">
+                <article class="shop-article ">
+                    <div class="img-article">
+
+                    </div>
+                    <div class="price-box flex-column">
+                        <span class="marca">Levis</span>
+                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                    </div>
+                </article>
+
+                <article class="shop-article ">
+                    <div class="img-article">
+
+                    </div>
+                    <div class="price-box flex-column">
+                        <span class="marca">Levis</span>
+                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                    </div>
+                </article>
+
+                <article class="shop-article ">
+                    <div class="img-article">
+
+                    </div>
+                    <div class="price-box flex-column">
+                        <span class="marca">Levis</span>
+                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                    </div>
+                </article>
+            </section>
         </main>
 
         <footer>
