--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
         </main>
 
         <footer>
-
+            <div class="footer-section container flex-center">
+                <div class="copyright">COPY</div>
+                <div class="social-icon">ICON</div>
+            </div>
         </footer>
     </body>
 </html>
