Structure - Add the discount symbol

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
             <section class="row-items container flex-center">
                 <article class="shop-article ">
                     <div class="img-article">
-
                     </div>
+
+                    <div class="discount">
+                        <span class="percentuale">-50&percnt;</span>
+                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                     </div>
+
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
                         <span class="title-art">Relaxed fit tee unisex</span>
@@ -52,8 +57,13 @@
 
                 <article class="shop-article ">
                     <div class="img-article">
-
                     </div>
+
+                    <div class="discount">
+                        <span class="percentuale">-50&percnt;</span>
+                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                     </div>
+
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
                         <span class="title-art">Relaxed fit tee unisex</span>
@@ -63,8 +73,13 @@
 
                 <article class="shop-article ">
                     <div class="img-article">
-
                     </div>
+
+                    <div class="discount">
+                        <span class="percentuale">-50&percnt;</span>
+                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                     </div>
+
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
                         <span class="title-art">Relaxed fit tee unisex</span>
@@ -76,8 +91,13 @@
             <section class="row-items container flex-center">
                 <article class="shop-article ">
                     <div class="img-article">
-
                     </div>
+
+                    <div class="discount">
+                        <span class="percentuale">-50&percnt;</span>
+                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                     </div>
+
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
                         <span class="title-art">Relaxed fit tee unisex</span>
@@ -87,8 +107,13 @@
 
                 <article class="shop-article ">
                     <div class="img-article">
-
                     </div>
+
+                    <div class="discount">
+                        <span class="percentuale">-50&percnt;</span>
+                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                     </div>
+
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
                         <span class="title-art">Relaxed fit tee unisex</span>
@@ -98,8 +123,13 @@
 
                 <article class="shop-article ">
                     <div class="img-article">
-
                     </div>
+
+                    <div class="discount">
+                        <span class="percentuale">-50&percnt;</span>
+                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                     </div>
+
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
                         <span class="title-art">Relaxed fit tee unisex</span>
@@ -107,6 +137,7 @@
                     </div>
                 </article>
             </section>
+
         </main>
 
         <footer>
