add header content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <title>Booland</title>
 
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -16,21 +22,21 @@
 
                 <nav class="menu flex-center">
                     <ul>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
+                        <li><a href="#">Donna</a></li>
+                        <li><a href="#">Uomo</a></li>
+                        <li><a href="#">Bambino</a></li>
                     </ul>
                 </nav>
 
                 <div class="main-logo flex-center">
-                    LOGO
+                    <img src="./img/boolean-logo.png" alt="Booland Logo">
                 </div>
 
                 <div class="account-icon flex-center">
                     <ul>
-                        <li>Icon</li>
-                        <li>Icon</li>
-                        <li>Icon</li>
+                        <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+                        <li><a href="#"><i class="fa-solid fa-heart"></i></li>
+                        <li><a href="#"><i class="fa-solid fa-shopping-bag"></i></a></li>
                     </ul>
                 </div>
             </section>
@@ -137,7 +143,6 @@
                     </div>
                 </article>
             </section>
-
         </main>
 
         <footer>
