add top row content

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <main>
             <section class="row-items container flex-center">
-                <article class="shop-article ">
-                    <div class="img-article">
-                    </div>
+                <article class="shop-article">
+
+                    <div class="img-article" id="art-relaxed-fit"></div>
 
                     <div class="discount">
                         <span class="percentuale">-50&percnt;</span>
@@ -62,34 +62,29 @@
                 </article>
 
                 <article class="shop-article ">
-                    <div class="img-article">
-                    </div>
+                    <div class="img-article" id="roses-tee"></div>
 
                     <div class="discount">
-                        <span class="percentuale">-50&percnt;</span>
-                        <span class="sostenibilita">Sostenibilit&agrave;</span>
+                        <span class="percentuale">-30&percnt;</span>
                      </div>
 
                     <div class="price-box flex-column">
-                        <span class="marca">Levis</span>
-                        <span class="title-art">Relaxed fit tee unisex</span>
-                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                        <span class="marca">Guess</span>
+                        <span class="title-art">Roses tee</span>
+                        <span class="price">20.99 &euro; <span class="sale">29.99 &euro;</span></span>
                     </div>
                 </article>
 
                 <article class="shop-article ">
-                    <div class="img-article">
-                    </div>
+                    <div class="img-article" id="colori-pastello"></div>
 
                     <div class="discount">
-                        <span class="percentuale">-50&percnt;</span>
-                        <span class="sostenibilita">Sostenibilit&agrave;</span>
-                     </div>
+                        <span class="percentuale">-30&percnt;</span>                     </div>
 
                     <div class="price-box flex-column">
-                        <span class="marca">Levis</span>
-                        <span class="title-art">Relaxed fit tee unisex</span>
-                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                        <span class="marca">Come zucchero filato</span>
+                        <span class="title-art">Voglia di colori pastello</span>
+                        <span class="price">129.99 &euro; <span class="sale">184.99 &euro;</span></span>
                     </div>
                 </article>
             </section>
