add bottom row content

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 
             <section class="row-items container flex-center">
                 <article class="shop-article ">
-                    <div class="img-article">
-                    </div>
+                    <div class="img-article" id="tee-unisex"></div>
 
                     <div class="discount">
                         <span class="percentuale">-50&percnt;</span>
@@ -101,40 +100,33 @@
 
                     <div class="price-box flex-column">
                         <span class="marca">Levis</span>
-                        <span class="title-art">Relaxed fit tee unisex</span>
+                        <span class="title-art">Tee unisex</span>
                         <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
                     </div>
                 </article>
 
                 <article class="shop-article ">
-                    <div class="img-article">
-                    </div>
+                    <div class="img-article" id="strip-bodice"></div>
 
-                    <div class="discount">
-                        <span class="percentuale">-50&percnt;</span>
-                        <span class="sostenibilita">Sostenibilit&agrave;</span>
-                     </div>
 
                     <div class="price-box flex-column">
-                        <span class="marca">Levis</span>
-                        <span class="title-art">Relaxed fit tee unisex</span>
-                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                        <span class="marca">Maja Deluxe</span>
+                        <span class="title-art">strip bodice</span>
+                        <span class="price">99.99 &euro;</span>
                     </div>
                 </article>
 
                 <article class="shop-article ">
-                    <div class="img-article">
-                    </div>
+                    <div class="img-article" id="maglione"></div>
 
                     <div class="discount">
-                        <span class="percentuale">-50&percnt;</span>
                         <span class="sostenibilita">Sostenibilit&agrave;</span>
                      </div>
 
                     <div class="price-box flex-column">
-                        <span class="marca">Levis</span>
-                        <span class="title-art">Relaxed fit tee unisex</span>
-                        <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
+                        <span class="marca">Esprit</span>
+                        <span class="title-art">maglione - black</span>
+                        <span class="price">29.99 &euro; </span>
                     </div>
                 </article>
             </section>
