--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="nav-bar container flex-center">
 
                 <nav class="menu flex-center">
-                    <ul>
+                    <ul class="nav">
                         <li><a href="#">Donna</a></li>
                         <li><a href="#">Uomo</a></li>
                         <li><a href="#">Bambino</a></li>
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="account-icon flex-center">
-                    <ul>
+                    <ul class="nav">
                         <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-heart"></i></li>
                         <li><a href="#"><i class="fa-solid fa-shopping-bag"></i></a></li>
@@ -134,8 +134,27 @@
 
         <footer>
             <div class="footer-section container flex-center">
-                <div class="copyright">COPY</div>
-                <div class="social-icon">ICON</div>
+                <div class="copyright">
+                    <h1>Boolando s.r.l.</h1>
+                    <nav class="foot-nav">
+                        <ul class="nav nav-foot">
+                            <li><a href="#">Informazioni legali</a></li>
+                            <li><a href="#">Informativa sulla privacy</a></li>
+                            <li><a href="#">Diritto di recesso</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="social-icon">
+                    <h1>Trovaci anche su:</h1>
+                    <ul class="nav nav-social">
+                        <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-pinterest"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
+
+                    </ul>
+                </div>
             </div>
         </footer>
     </body>
