add favourite heart

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                         <span class="title-art">Relaxed fit tee unisex</span>
                         <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
                     </div>
+
+                    <div class="favorite-heart flex-center">&hearts;</div>
                 </article>
 
                 <article class="shop-article ">
@@ -73,6 +75,8 @@
                         <span class="title-art">Roses tee</span>
                         <span class="price">20.99 &euro; <span class="sale">29.99 &euro;</span></span>
                     </div>
+
+                    <div class="favorite-heart flex-center">&hearts;</div>
                 </article>
 
                 <article class="shop-article ">
@@ -86,6 +90,8 @@
                         <span class="title-art">Voglia di colori pastello</span>
                         <span class="price">129.99 &euro; <span class="sale">184.99 &euro;</span></span>
                     </div>
+
+                    <div class="favorite-heart flex-center">&hearts;</div>
                 </article>
             </section>
 
@@ -103,6 +109,8 @@
                         <span class="title-art">Tee unisex</span>
                         <span class="price">14.99 &euro; <span class="sale">29.99 &euro;</span></span>
                     </div>
+
+                    <div class="favorite-heart flex-center">&hearts;</div>
                 </article>
 
                 <article class="shop-article ">
@@ -114,6 +122,8 @@
                         <span class="title-art">strip bodice</span>
                         <span class="price">99.99 &euro;</span>
                     </div>
+
+                    <div class="favorite-heart flex-center">&hearts;</div>
                 </article>
 
                 <article class="shop-article ">
@@ -128,6 +138,8 @@
                         <span class="title-art">maglione - black</span>
                         <span class="price">29.99 &euro; </span>
                     </div>
+
+                    <div class="favorite-heart flex-center">&hearts;</div>
                 </article>
             </section>
         </main>
